--- a/Chushka/Views/Shared/_Layout.cshtml
+++ b/Chushka/Views/Shared/_Layout.cshtml
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Chushka</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="d:\ivailo 12a\chushka1\chushka\chushka\chushka\css\reset-css.css" rel="stylesheet" />
-    <link href="d:\ivailo 12a\chushka1\chushka\chushka\chushka\css\style.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Chushka.styles.css" asp-append-version="true" />
+    <link href="~/cssyordanova/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/cssyordanova/style.css" rel="stylesheet" />
 </head>
+<link href="~/cssyordanova/reset-css.css" rel="stylesheet" />
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -25,16 +26,31 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Guesthome">Home Guest</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Update">Edit-Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="userhome">User Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="AdminHome">Home-admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="adminhome">Admin Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="userhome">Home-user</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Add">Add Product</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="guesthome">Home-guest</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Create">Create Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Delete">Delete product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Details">Details product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Detailsadmin">Detailsadmin product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="All">Order all</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
