--- a/Chushka/Views/Home/userhome.cshtml
+++ b/Chushka/Views/Home/userhome.cshtml
@@ -1,7 +1,9 @@
-﻿<link rel="stylesheet" type="text/css" href="~/cssyordanova/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="~/cssyordanova/reset-css.css">
-<link rel="stylesheet" type="text/css" href="~/cssyordanova/style.css">
-<main class="mt-3 mb-5">
+﻿    <link rel="stylesheet" type="text/css" href="~/css2/reset-css.css">
+    <link rel="stylesheet" type="text/css" href="~/css2/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/css2/style.css">
+
+<body>
+    <main class="mt-3 mb-5">
         <div class="container-fluid text-center">
             <h2>Greetings, Pesho!</h2>
             <h4>Feel free to view and order any of our products.</h4>
@@ -148,3 +150,4 @@
             </div>
         </div>
     </main>
+</body>
