--- a/Chushka/Views/Product/Details.cshtml
+++ b/Chushka/Views/Product/Details.cshtml
@@ -1,23 +1,25 @@
-﻿<link rel="stylesheet" type="text/css" href="~/cssyordanova/bootstrap.min.css">
+﻿@model Chushka.Models.ProductViewModel
+<link rel="stylesheet" type="text/css" href="~/cssyordanova/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="~/cssyordanova/reset-css.css">
 <link rel="stylesheet" type="text/css" href="~/cssyordanova/style.css">
 <main class="mt-3 mb-5">
-    <h1 class="text-center">Chushkopek</h1>
+
+    <h1 class="text-center">Name @Model.Name</h1>
     <hr class="hr-2 bg-dark" />
     <div class="product-type-holder half-width mx-auto d-flex justify-content-between">
-        <h3 class="text-center">Type: Domestic</h3>
-        <h3 class="text-center">Price: $500</h3>
+        <h3 class="text-center">Type: </h3>
+        <h3 class="text-center">Price @Model.Price</h3>
     </div>
     <hr class="hr-2 bg-dark" />
     <h3 class="text-center">Description</h3>
     <div class="product-description-holder">
         <p class="text-center mt-4">
-            A universal tool for peking chushkas.
+            @Model.Description
         </p>
-    </div>
+    </div>   
     <hr class="hr-2 bg-dark" />
     <h3 class="text-center">Actions</h3>
     <div class="product-action-holder mt-4 d-flex justify-content-around">
-        <a class="btn chushka-bg-color" href="/product/order/">Order</a>
+        <a class="btn chushka-bg-color" asp-controller="Order" asp-action="Add">Order</a>
     </div>
 </main>
