--- a/Chushka/Views/Product/AdminHome.cshtml
+++ b/Chushka/Views/Product/AdminHome.cshtml
@@ -1,4 +1,5 @@
-﻿<link rel="stylesheet" type="text/css" href="~/cssyordanova/bootstrap.min.css">
+﻿@model ICollection<Chushka.Models.ProductViewModel>
+<link rel="stylesheet" type="text/css" href="~/cssyordanova/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="~/cssyordanova/reset-css.css">
 <link rel="stylesheet" type="text/css" href="~/cssyordanova/style.css">
 
@@ -10,118 +11,18 @@
     <hr class="hr-2 bg-dark" />
     <div class="container-fluid product-holder">
         <div class="row d-flex justify-content-around">
+            @foreach (var item in Model)
+            {               
             <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Chushkopek</h5>
+                <h5 class="text-center mt-3">@item.Name</h5>
                 <hr class="hr-1 bg-white" />
                 <p class="text-white text-center">
-                    A universal tool for peking chushkas.
+                    @item.Description
                 </p>
                 <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$500</h6>
+                <h6 class="text-center text-white mb-3">@item.Price</h6>
             </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Chushkopek</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for peking chushkas.
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$500</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Chushkopek</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for peking chushkas.
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$500</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Chushkopek</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for peking chushkas.
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$500</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Chushkopek</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for peking chushkas.
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$500</h6>
-            </div>
-        </div>
-        <div class="row d-flex justify-content-around mt-4">
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Injektoplqktor</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for basically everything. It's ba...
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1.56</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Injektoplqktor</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for basically everything. It's ba...
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1.56</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Injektoplqktor</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for basically everything. It's ba...
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1.56</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Injektoplqktor</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for basically everything. It's ba...
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1.56</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Injektoplqktor</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    A universal tool for basically everything. It's ba...
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1.56</h6>
-            </div>
-        </div>
-        <div class="row d-flex justify-content-around mt-4">
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Something</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    Something
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1000</h6>
-            </div>
-            <div class="product col-md-2 chushka-bg-color rounded-top rounded-bottom">
-                <h5 class="text-center mt-3">Something</h5>
-                <hr class="hr-1 bg-white" />
-                <p class="text-white text-center">
-                    Something
-                </p>
-                <hr class="hr-1 bg-white" />
-                <h6 class="text-center text-white mb-3">$1000</h6>
-            </div>
+            }                
         </div>
     </div>
 </main>
